--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,15 +10,26 @@ jobs:
     - uses: actions/checkout@v4
       with:
         ref: test-branch
+    
     - uses: actions/setup-node@v4
       with:
         node-version: 18
+    
     - name: Install dependencies
       run: npm ci
+    
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+
+    - name: Cache dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node
+    
     - name: Run Playwright tests
       run: npx playwright test
+    
     - uses: actions/upload-artifact@v4
       if: always()
       with:
