--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -13,6 +13,7 @@ jobs:
 
     - name: Cache dependencies
       uses: actions/cache@v4
+      id: cache-npm
       with:
         path: ~/.npm
         key: ${{ runner.os }}-node
@@ -21,6 +22,17 @@ jobs:
       name: List the state of node modules
       continue-on-error: true
       run: npm list
+    
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: 'npm'
+    
+    - name: Install dependencies
+      run: npm ci
+    
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps chromium
     
     - name: Run Playwright tests
       run: npx playwright test
