--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -11,28 +11,46 @@ jobs:
       with:
         ref: test-branch
 
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: 'npm'
+
+    - name: Get node version
+      id: node_version
+      run: echo "::set-output name=version::$(node -v)"
+
     - name: Cache dependencies
       uses: actions/cache@v4
       id: cache-npm
       with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node
+        path: |
+          **/node_modules
+        key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}-${{ steps.node_version.outputs.version }}
+
+    - name: Get playwright version
+      id: playwright_version
+      run: echo "::set-output name=version::$(npx playwright --version)"
+
+    - name: Cache playwright binaries
+      uses: actions/cache@v4
+      id: cache-playwright
+      with: 
+        path: |
+          ~/.cache/ms-playwright
+        key: ${{ runner.os }}-playwright-${{ steps.playwright_version.outputs.version }}
 
     - if: ${{ steps.cache-npm.outputs.cache-hit == 'true' }}
       name: List the state of node modules
       continue-on-error: true
       run: npm list
     
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 20
-        cache: 'npm'
-    
     - name: Install dependencies
       run: npm ci
     
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps chromium
+      if: steps.cache-playwright.outputs.cache-hit != 'true'
     
     - name: Run Playwright tests
       run: npx playwright test
