--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,19 +24,20 @@ jobs:
       with:
         path: |
           **/node_modules
-        key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}-${{ steps.node_version.outputs.version }}
+        key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package-lock.json') }}-${{ steps.node_version.outputs.version }}
 
     - name: Get playwright version
       id: playwright_version
-      run: echo "::set-output name=version::$(npx playwright --version)"
+      run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('./package-lock.json').dependencies['@playwright/test'].version)")" >> $GITHUB_ENV
 
     - name: Cache playwright binaries
       uses: actions/cache@v4
       id: cache-playwright
       with: 
-        path: |
-          ~/.cache/ms-playwright
+        path: ~/.cache/ms-playwright
         key: ${{ runner.os }}-playwright-${{ steps.playwright_version.outputs.version }}
+        restore-keys: |
+            ${{ runner.os }}-playwright-
 
     - if: ${{ steps.cache-npm.outputs.cache-hit == 'true' }}
       name: List the state of node modules
@@ -47,8 +48,8 @@ jobs:
       run: npm ci
     
     - name: Install Playwright Browsers
+      if: ${{ steps.cache-playwright.outputs.cache-hit != 'true' }}
       run: npx playwright install --with-deps chromium
-      if: steps.cache-playwright.outputs.cache-hit != 'true'
     
     - name: Run Playwright tests
       run: npx playwright test
