--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -6,14 +6,12 @@ on:
 jobs:
   trigger:
     runs-on: ubuntu-latest
-    env:
-      NODE_VERSION: 20
     steps:
     - uses: actions/checkout@v4
 
     - uses: actions/setup-node@v4
       with:
-        node-version: ${{ env.NODE_VERSION }}
+        node-version: 20
         cache: 'npm'
 
     - name: Cache dependencies
@@ -22,11 +20,11 @@ jobs:
       with:
         path: |
           **/node_modules
-        key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package-lock.json') }}-${{ env.NODE_VERSION }}
+        key: ${{ runner.os }}-node_modules-${{ hashFiles('package-lock.json') }}
 
     - name: Get playwright version
       id: playwright_version
-      run: echo "PLAYWRIGHT_VERSION=$(jq -r '.devDependencies["@playwright/test"].version' package-lock.json)" >> $GITHUB_ENV
+      run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('./package-lock.json').dependencies['@playwright/test'].version)")" >> $GITHUB_ENV
 
     - name: Cache playwright binaries
       uses: actions/cache@v4
