--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,61 +1,10 @@
-name: Playwright Tests
+name: Playwright tests run manually
 
 on:
   workflow_dispatch
 
 jobs:
-  trigger:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 20
-        cache: 'npm'
-
-    - name: Cache dependencies
-      uses: actions/cache@v4
-      id: cache-npm
-      with:
-        path: |
-          **/node_modules
-        key: ${{ runner.os }}-node_modules-${{ hashFiles('package-lock.json') }}
-
-    - name: Get playwright version
-      id: playwright_version
-      run: |
-        PLAYWRIGHT_VERSION=$(npm ls @playwright/test | grep @playwright | sed 's/.*@//')
-        echo "Playwright's Version: $PLAYWRIGHT_VERSION"
-        echo "PLAYWRIGHT_VERSION=$PLAYWRIGHT_VERSION" >> $GITHUB_ENV
-
-    - name: Cache playwright binaries
-      uses: actions/cache@v4
-      id: cache-playwright
-      with: 
-        path: ~/.cache/ms-playwright
-        key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}
-        restore-keys: |
-            ${{ runner.os }}-playwright-
-
-    - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-      name: List the state of node modules
-      continue-on-error: true
-      run: npm list
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Install Playwright Browsers
-      if: ${{ steps.cache-playwright.outputs.cache-hit != 'true' }}
-      run: npx playwright install --with-deps chromium
-    
-    - name: Run Playwright tests
-      run: npx playwright test
-    
-    - uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+      - uses: ./.github/workflows/install-run-dependencies.yml
