--- a/.github/workflows/install-run-dependencies.yml
+++ b/.github/workflows/install-run-dependencies.yml
@@ -4,7 +4,7 @@ on:
   workflow_call
 
 jobs:  
-  reusable_workflow_job:
+  reusable_tests_job:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
