--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "devDependencies": {
     "@types/node": "^20.11.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
+    "@typescript-eslint/parser": "^7.1.0",
     "dotenv": "^16.4.4",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "feature-map": "^1.0.0",
     "prettier": "^3.2.5",
-    "prettier-eslint": "^16.3.0"
+    "prettier-eslint": "^16.3.0",
+    "typescript-eslint": "^7.1.0"
   },
   "dependencies": {
     "@playwright/test": "^1.42.0",
