--- a/.github/workflows/install-run-dependencies.yml
+++ b/.github/workflows/install-run-dependencies.yml
@@ -3,6 +3,11 @@ name: Install dependencies and run tests
 on:
   workflow_call
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:  
   reusable_tests_job:
     environment:
