--- a/.github/workflows/install-run-dependencies.yml
+++ b/.github/workflows/install-run-dependencies.yml
@@ -66,10 +66,12 @@ jobs:
       uses: actions/configure-pages@v4
     
     - name: Upload artifact
+      if: always()
       uses: actions/upload-pages-artifact@v3
       with:
         path: playwright-report/
     
     - name: Deploy to GitHub Pages
+      if: always()
       id: deployment
       uses: actions/deploy-pages@v4
