--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": "latest"
+    "ecmaVersion": "latest",
+    "project": ["./tsconfig.json"]
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
