--- a/.github/workflows/install-run-dependencies.yml
+++ b/.github/workflows/install-run-dependencies.yml
@@ -61,7 +61,7 @@ jobs:
       uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: playwright-report${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
+        name: playwright-report${{ matrix.shardIndex }}${{ matrix.shardTotal }}
         path: playwright-report/
         retention-days: 30
 
