--- a/.github/workflows/install-run-dependencies.yml
+++ b/.github/workflows/install-run-dependencies.yml
@@ -61,8 +61,8 @@ jobs:
       uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: playwright-report${{ matrix.shardIndex }}${{ matrix.shardTotal }}
-        path: playwright-report/
+        name: playwright-report${{ matrix.shardIndex }}
+        path: playwright-report${{ matrix.shardIndex }}/
         retention-days: 30
 
     - name: Setup Pages
@@ -73,7 +73,8 @@ jobs:
       if: always()
       uses: actions/upload-pages-artifact@v3
       with:
-        path: playwright-report/
+        name: playwright-report${{ matrix.shardIndex }}
+        path: playwright-report${{ matrix.shardIndex }}/
     
     - name: Deploy to GitHub Pages
       if: always()
