--- a/.github/workflows/install-run-dependencies.yml
+++ b/.github/workflows/install-run-dependencies.yml
@@ -10,9 +10,9 @@ permissions:
 
 jobs:  
   reusable_tests_job:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+    # environment:
+    #   name: github-pages
+    #   url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -61,22 +61,22 @@ jobs:
       uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: playwright-report${{ matrix.shardIndex }}
-        path: playwright-report${{ matrix.shardIndex }}/
+        name: blob-report-${{ matrix.shardIndex }}
+        path: blob-report
         retention-days: 30
 
-    - name: Setup Pages
-      if: always()
-      uses: actions/configure-pages@v4
+    # - name: Setup Pages
+    #   if: always()
+    #   uses: actions/configure-pages@v4
     
-    - name: Upload artifact
-      if: always()
-      uses: actions/upload-pages-artifact@v3
-      with:
-        name: playwright-report${{ matrix.shardIndex }}
-        path: playwright-report${{ matrix.shardIndex }}/
+    # - name: Upload artifact
+    #   if: always()
+    #   uses: actions/upload-pages-artifact@v3
+    #   with:
+    #     name: playwright-report
+    #     path: playwright-report/
     
-    - name: Deploy to GitHub Pages
-      if: always()
-      id: deployment
-      uses: actions/deploy-pages@v4
+    # - name: Deploy to GitHub Pages
+    #   if: always()
+    #   id: deployment
+    #   uses: actions/deploy-pages@v4
