--- a/.github/workflows/install-run-dependencies.yml
+++ b/.github/workflows/install-run-dependencies.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         shardIndex: [1, 2, 3]
-        shardTotal: [6]
+        shardTotal: [3]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
@@ -65,6 +65,38 @@ jobs:
         path: blob-report
         retention-days: 30
 
+  merge-reports:
+    if: always()
+    needs: reusable_tests_job
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Download reports
+        uses: actions/download-artifact@v4
+        with:
+          name: all-blob-report
+          path: blob-report-*
+          merge-multiple: true
+
+      - name: Merge reports
+        run: npx playwright merge-reports --reporter html ./all-blob-reports
+      
+      - name: Upload HTML report
+        uses: actions/upload-artifact@v4
+        with:
+          name: html-report--attempt-${{ github.run_attempt }}
+          path: playwright-report
+          retention-days: 7
+      
     # - name: Setup Pages
     #   if: always()
     #   uses: actions/configure-pages@v4
