--- a/.github/workflows/install-run-dependencies.yml
+++ b/.github/workflows/install-run-dependencies.yml
@@ -63,7 +63,7 @@ jobs:
       with:
         name: blob-report-${{ matrix.shardIndex }}
         path: blob-report
-        retention-days: 30
+        retention-days: 1
 
   merge-reports:
     if: always()
@@ -83,8 +83,8 @@ jobs:
       - name: Download reports
         uses: actions/download-artifact@v4
         with:
-          name: all-blob-report
-          path: blob-report-*
+          path: all-blob-reports
+          pattern: blob-report-*
           merge-multiple: true
 
       - name: Merge reports
