--- a/.github/workflows/install-run-dependencies.yml
+++ b/.github/workflows/install-run-dependencies.yml
@@ -56,7 +56,7 @@ jobs:
       if: always()
       with:
         name: test-results
-        path: playwright-report/index.html
+        path: playwright-report/
         retention-days: 1
 
     - name: setup github pages
@@ -66,7 +66,7 @@ jobs:
       uses: actions/upload-pages-artifact@v3
       with:
         name: report
-        path: playwright-report/index.html
+        path: playwright-report/
 
     - name: deploy
       id: deployment
