--- a/.github/workflows/install-run-dependencies.yml
+++ b/.github/workflows/install-run-dependencies.yml
@@ -67,10 +67,11 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
+        name: report
         path: playwright-report/
 
     - name: deploy
       id: deployment
       uses: actions/deploy-pages@v4
       with:
-        artifact_name: test-results
+        artifact_name: report
