--- a/.github/workflows/install-run-dependencies.yml
+++ b/.github/workflows/install-run-dependencies.yml
@@ -67,7 +67,7 @@ jobs:
     steps:
     - uses: actions/download-artifact@v4
       with:
-        name: report
+        name: test-results 
         path: playwright-report/
 
     - name: setup pages
