--- a/.github/workflows/install-run-dependencies.yml
+++ b/.github/workflows/install-run-dependencies.yml
@@ -58,7 +58,7 @@ jobs:
       if: always()
       with:
         name: test-results
-        path: ~playwright-report/
+        path: ./playwright-report/
         retention-days: 1
 
   report:
