--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -3,7 +3,43 @@ description: "A composite action that runs a sequence of steps"
 runs:
   using: "composite"
   steps:
-    - run: echo "Step 1"
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: "npm"
+
+    - name: Cache dependencies
+      uses: actions/cache@v4
+      id: cache-npm
+      with:
+        path: |
+          **/node_modules
+        key: ${{ runner.os }}-node_modules-${{ hashFiles('package-lock.json') }}
+
+    - name: Cache playwright binaries
+      uses: actions/cache@v4
+      id: cache-playwright
+      with:
+        path: ~/.cache/ms-playwright
+        key: ${{ runner.os }}-playwright-${{ hashFiles('package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-playwright-
+
+    - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+      name: List the state of node modules
+      continue-on-error: true
+      run: npm list
       shell: bash
-    - run: echo "Step 2"
+
+    - name: Install dependencies
+      run: npm ci
+      shell: bash
+
+    - name: Install Playwright Browsers
+      if: ${{ steps.cache-playwright.outputs.cache-hit != 'true' }}
+      run: npx playwright install --with-deps chromium
+      shell: bash
+
+    - name: Run Playwright tests
+      run: npx playwright test
       shell: bash
