--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -33,6 +33,7 @@ runs:
 
     - name: Install dependencies
       run: npm ci
+      shell: bash
 
     - name: Install Playwright Browsers
       if: ${{ steps.cache-playwright.outputs.cache-hit != 'true' }}
