--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,6 +22,9 @@ jobs:
     - name: override text
       run: |
         TYPE="xxxx"
+
+    - name: run tests
+      run: |
         echo "Type: $TYPE"
       
     - name: start
