--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -44,6 +44,7 @@ runs:
       shell: bash
       run: |
         echo "event name is ${{ github.event_name }}"
+        echo "type ${{ github.event.inputs.type }}"
 
     - name: Run Playwright tests
       run: npx playwright test
