--- a/.github/workflows/install-run-dependencies.yml
+++ b/.github/workflows/install-run-dependencies.yml
@@ -11,9 +11,9 @@ permissions:
 jobs:  
   reusable_tests_job:
     runs-on: ubuntu-latest
-    environment: 
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+    # environment: 
+    #   name: github-pages
+    #   url: ${{ steps.deployment.outputs.page_url }}
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
@@ -61,29 +61,29 @@ jobs:
         path: ./playwright-report/
         retention-days: 1
 
-  report:
-    needs: reusable_tests_job
-    runs-on: ubuntu-latest
-    environment: 
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-    - uses: actions/download-artifact@v4
-      with:
-        name: test-results 
-        path: playwright-report/
+  # report:
+  #   needs: reusable_tests_job
+  #   runs-on: ubuntu-latest
+  #   environment: 
+  #     name: github-pages
+  #     url: ${{ steps.deployment.outputs.page_url }}
+  #   steps:
+  #   - uses: actions/download-artifact@v4
+  #     with:
+  #       name: test-results 
+  #       path: playwright-report/
 
-    - name: setup pages
-      uses: actions/configure-pages@v4
+  #   - name: setup pages
+  #     uses: actions/configure-pages@v4
 
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v3
-      with:
-        name: report
-        path: playwright-report/
+  #   - name: Upload artifact
+  #     uses: actions/upload-pages-artifact@v3
+  #     with:
+  #       name: report
+  #       path: playwright-report/
 
-    - name: deploy
-      id: deployment
-      uses: actions/deploy-pages@v4
-      with:
-        artifact_name: report
+  #   - name: deploy
+  #     id: deployment
+  #     uses: actions/deploy-pages@v4
+  #     with:
+  #       artifact_name: report
