--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -3,6 +3,9 @@ name: Playwright tests run manually
 on:
   workflow_dispatch:
     inputs:
+      environment:
+        description: "Environment to run the tests in"
+        type: string
       type:
         description: "text"
         type: string
@@ -10,6 +13,7 @@ on:
 jobs:  
   reusable_tests_job:
     runs-on: ubuntu-latest
+    environment: ${{ github.event.inputs.environment}}
     steps:
     - uses: actions/checkout@v4
 
@@ -17,6 +21,8 @@ jobs:
       id: typetext
       run: |
         TYPE=${{ github.event.inputs.type }}
+        echo "TYPE=${TYPE}" >> "$GITHUB_OUTPUT"
+        ENV=${{ github.event.inputs.environment}}
         echo "TYPE=${TYPE}" >> "$GITHUB_OUTPUT"
     
     - name: override text
@@ -30,20 +36,21 @@ jobs:
     - name: start
       uses: ./.github/actions/run-tests/
       with:
+        env: ${{ inputs.environment }}
         some: "some123"
         value: "value123"
 
-    - name: delete something
-      run: |
-        echo "Deleting something"
-        rm -rf ./featureMap/file-to-delete.yml
+    # - name: delete something
+    #   run: |
+    #     echo "Deleting something"
+    #     rm -rf ./featureMap/file-to-delete.yml
 
-    - name: commit change
-      run: |
-       echo "Committing change"
-       git config --global user.email "karwatmateusz07@gmail.com"
-       git config --global user.name "karwatmateusz"
-       git checkout test-b
-       git add .
-       git commit -m "test commit"
-       git push
+    # - name: commit change
+    #   run: |
+    #    echo "Committing change"
+    #    git config --global user.email "karwatmateusz07@gmail.com"
+    #    git config --global user.name "karwatmateusz"
+    #    git checkout test-b
+    #    git add .
+    #    git commit -m "test commit"
+    #    git push
