--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -36,7 +36,7 @@ jobs:
     - name: start
       uses: ./.github/actions/run-tests/
       with:
-        env: ${{ inputs.environment }}
+        env: ${{ secrets.ENV_SECRET }}
         some: "some123"
         value: "value123"
 
