--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,6 +29,13 @@ jobs:
       run: |
         TYPE="xxxx"
 
+    - name: get aws secret
+      uses: aws-actions/aws-secretsmanager-get-secrets@v2
+      with:
+        secret-ids: |
+          env, arn:aws:secretsmanager:eu-north-1:149536461429:secret:test/beta/acc-crsGQ2
+
+
     - name: run tests
       run: |
         echo "Type: $TYPE"
