--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -33,7 +33,7 @@ jobs:
       uses: aws-actions/aws-secretsmanager-get-secrets@v2
       with:
         secret-ids: |
-          env, arn:aws:secretsmanager:eu-north-1:149536461429:secret:test/beta/acc-crsGQ2
+          ENV, arn:aws:secretsmanager:eu-north-1:149536461429:secret:test/beta/acc-crsGQ2
 
 
     - name: run tests
