--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -53,6 +53,8 @@ jobs:
         env: ${{ secrets.ENV_SECRET }}
         some: ${{ env.ENVIK }}
         value: "value123"
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     # - name: delete something
     #   run: |
