--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -10,6 +10,12 @@ inputs:
   value:
     description: "The working directory"
     required: true
+  aws-access-key-id:
+    description: ""
+    required: true
+  aws-secret-access-key:
+    description: ""
+    required: true
 runs:
   using: "composite"
   steps:
@@ -49,6 +55,20 @@ runs:
       if: ${{ steps.cache-playwright.outputs.cache-hit != 'true' }}
       run: npx playwright install --with-deps chromium
       shell: bash
+
+    - name: set aws
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ inputs.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-north-1
+
+    - name: get aws secret
+      uses: aws-actions/aws-secretsmanager-get-secrets@v2
+      with:
+        secret-ids: |
+          ENVIK, test/beta/acc
+          test/beta/acc
 
     - name: display event name
       shell: bash
