--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,19 +29,19 @@ jobs:
       run: |
         TYPE="xxxx"
 
-    - name: set aws
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-north-1
+    # - name: set aws
+    #   uses: aws-actions/configure-aws-credentials@v4
+    #   with:
+    #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    #     aws-region: eu-north-1
 
-    - name: get aws secret
-      uses: aws-actions/aws-secretsmanager-get-secrets@v2
-      with:
-        secret-ids: |
-          ENVIK, test/beta/acc
-          test/beta/acc
+    # - name: get aws secret
+    #   uses: aws-actions/aws-secretsmanager-get-secrets@v2
+    #   with:
+    #     secret-ids: |
+    #       ENVIK, test/beta/acc
+    #       test/beta/acc
 
     - name: run tests
       run: |
