--- a/.github/workflows/install-run-dependencies.yml
+++ b/.github/workflows/install-run-dependencies.yml
@@ -57,7 +57,7 @@ jobs:
       uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: test-results
+        name: test-results-${{ runner.os }} 
         path: ./playwright-report/
         retention-days: 1
 
