--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,1 @@
-node_modules/
-/test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
-.env
-coverage-output.txt
-.idea/
-.vscode/
+node_modules
