--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,63 +10,88 @@ on:
         description: "text"
         type: string
 
-jobs:  
+jobs:
   reusable_tests_job:
     runs-on: ubuntu-latest
     environment: ${{ github.event.inputs.environment}}
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: prepare text
-      id: typetext
-      run: |
-        TYPE=${{ github.event.inputs.type }}
-        echo "TYPE=${TYPE}" >> "$GITHUB_OUTPUT"
-        ENV=${{ github.event.inputs.environment}}
-        echo "TYPE=${TYPE}" >> "$GITHUB_OUTPUT"
-    
-    - name: override text
-      run: |
-        TYPE="xxxx"
+      - name: prepare text
+        id: typetext
+        run: |
+          TYPE=${{ github.event.inputs.type }}
+          echo "TYPE=${TYPE}" >> "$GITHUB_OUTPUT"
+          ENV=${{ github.event.inputs.environment}}
+          echo "TYPE=${TYPE}" >> "$GITHUB_OUTPUT"
 
-    - name: set aws
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-north-1
+      - name: override text
+        run: |
+          TYPE="xxxx"
 
-    # - name: get aws secret
-    #   uses: aws-actions/aws-secretsmanager-get-secrets@v2
-    #   with:
-    #     secret-ids: |
-    #       ENVIK, test/beta/acc
-    #       test/beta/acc
+      - name: set aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-north-1
 
-    - name: run tests
-      run: |
-        echo "Type: $TYPE"
-      
-    - name: start
-      uses: ./.github/actions/run-tests/
-      with:
-        env: ${{ secrets.ENV_SECRET }}
-        some: "ASD"
-        value: "value123"
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      # - name: get aws secret
+      #   uses: aws-actions/aws-secretsmanager-get-secrets@v2
+      #   with:
+      #     secret-ids: |
+      #       ENVIK, test/beta/acc
+      #       test/beta/acc
 
-    # - name: delete something
-    #   run: |
-    #     echo "Deleting something"
-    #     rm -rf ./featureMap/file-to-delete.yml
+      - name: run tests
+        run: |
+          echo "Type: $TYPE"
 
-    # - name: commit change
-    #   run: |
-    #    echo "Committing change"
-    #    git config --global user.email "karwatmateusz07@gmail.com"
-    #    git config --global user.name "karwatmateusz"
-    #    git checkout test-b
-    #    git add .
-    #    git commit -m "test commit"
-    #    git push
+      - name: start
+        uses: ./.github/actions/run-tests/
+        with:
+          env: ${{ secrets.ENV_SECRET }}
+          some: "ASD"
+          value: "value123"
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  report:
+    needs: reusable_tests_job
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: test-results
+          path: playwright-report/
+
+      - name: setup pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          name: report
+          path: playwright-report/
+
+      - name: deploy
+        id: deployment
+        uses: actions/deploy-pages@v4
+        with:
+          artifact_name: report
+  # - name: delete something
+  #   run: |
+  #     echo "Deleting something"
+  #     rm -rf ./featureMap/file-to-delete.yml
+
+  # - name: commit change
+  #   run: |
+  #    echo "Committing change"
+  #    git config --global user.email "karwatmateusz07@gmail.com"
+  #    git config --global user.name "karwatmateusz"
+  #    git checkout test-b
+  #    git add .
+  #    git commit -m "test commit"
+  #    git push
