--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -56,28 +56,28 @@ runs:
       run: npx playwright install --with-deps chromium
       shell: bash
 
-    - name: set aws
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ inputs.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-north-1
+    # - name: set aws
+    #   uses: aws-actions/configure-aws-credentials@v4
+    #   with:
+    #     aws-access-key-id: ${{ inputs.AWS_ACCESS_KEY_ID }}
+    #     aws-secret-access-key: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
+    #     aws-region: eu-north-1
 
-    - name: get aws secret
-      uses: aws-actions/aws-secretsmanager-get-secrets@v2
-      with:
-        secret-ids: |
-          ENVIK, test/beta/acc
-          test/beta/acc
+    # - name: get aws secret
+    #   uses: aws-actions/aws-secretsmanager-get-secrets@v2
+    #   with:
+    #     secret-ids: |
+    #       ENVIK, test/beta/acc
+    #       test/beta/acc
 
-    - name: display event name
-      shell: bash
-      run: |
-        echo "env is ${{inputs.env}}"
-        echo "event name is ${{ github.event_name }}"
-        echo "type ${{ github.event.inputs.type }}"
-        echo "some is ${{ inputs.some }}"
-        echo "value is ${{ inputs.value }}"
+    # - name: display event name
+    #   shell: bash
+    #   run: |
+    #     echo "env is ${{inputs.env}}"
+    #     echo "event name is ${{ github.event_name }}"
+    #     echo "type ${{ github.event.inputs.type }}"
+    #     echo "some is ${{ inputs.some }}"
+    #     echo "value is ${{ inputs.value }}"
 
     - name: Run Playwright tests
       run: npx playwright test --grep ${{ inputs.env }}
