--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -28,36 +28,12 @@ jobs:
           ENV=${{ github.event.inputs.environment}}
           echo "TYPE=${TYPE}" >> "$GITHUB_OUTPUT"
 
-      - name: override text
-        run: |
-          TYPE="xxxx"
-
-      # - name: set aws
-      #   uses: aws-actions/configure-aws-credentials@v4
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: eu-north-1
-
-      # - name: get aws secret
-      #   uses: aws-actions/aws-secretsmanager-get-secrets@v2
-      #   with:
-      #     secret-ids: |
-      #       ENVIK, test/beta/acc
-      #       test/beta/acc
-
-      - name: run tests
-        run: |
-          echo "Type: $TYPE"
-
       - name: start
         uses: ./.github/actions/run-tests/
         with:
           env: ${{ secrets.ENV_SECRET }}
           some: "ASD"
           value: "value123"
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   report:
     needs: reusable_tests_job
     runs-on: ubuntu-latest
@@ -78,6 +54,9 @@ jobs:
         with:
           name: report
           path: playwright-report/
+
+      - name: list files
+        run: ls -la
 
       - name: deploy
         id: deployment
