--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@playwright/test": "^1.50.1",
     "@types/node": "^20.11.19"
-  },
-  "dependencies": {
-    "@playwright/test": "^1.42.0"
   }
 }
