--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -41,11 +41,16 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
+
+      - name: list files
+        run: ls -la
+
       - uses: actions/download-artifact@v4
         with:
           name: test-results
           path: playwright-report/
-
+      - name: list files
+        run: ls -la
       - name: setup pages
         uses: actions/configure-pages@v4
 
@@ -54,7 +59,6 @@ jobs:
         with:
           name: report
           path: playwright-report/
-
       - name: list files
         run: ls -la
 
