--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -36,9 +36,10 @@ jobs:
           value: "value123"
 
       - name: upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: test-results
+          path: playwright-report/
   report:
     needs: reusable_tests_job
     runs-on: ubuntu-latest
