--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.50.1",
-    "@types/node": "^20.11.19"
+    "@types/node": "^20.11.19",
+    "zod": "^3.23.8"
   },
   "dependencies": {
     "dotenv": "^16.4.7"
