--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -59,10 +59,12 @@ runs:
       shell: bash
 
     - name: Install dependencies
+      if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
       run: npm install
       shell: bash
 
     - name: Install Playwright Browsers
+      if: ${{ steps.cache-playwright.outputs.cache-hit != 'true' }}
       run: npx playwright install --with-deps
       shell: bash
 
