--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -73,10 +73,10 @@ runs:
       shell: bash
       run: |
         TYPE=${{ inputs.type }}
-        echo "TYPE=${TYPE}" >> "$GITHUB_OUTPUT"
+        echo "TYPE=${TYPE}" >> "$GITHUB_ENV"
         ENV=${{ github.event.inputs.environment}}
         envvar=${{ inputs.envvar }}
-        echo "ENVVAR=${envvar}" >> "$GITHUB_OUTPUT"
+        echo "ENVVAR=${envvar}" >> "$GITHUB_ENV"
 
     - name: Run Playwright tests
       run: npx playwright test
