--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -30,6 +30,10 @@ runs:
         node-version: 20
         cache: "npm"
 
+    - name: test action secret
+      run: echo "${{ secrets.ENVSEC }}"
+      shell: bash
+
     - name: Cache dependencies
       uses: actions/cache@v4
       id: cache-npm
