--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -35,14 +35,14 @@ jobs:
       - name: Run tests
         run: npx playwright test
 
-      - name: Create comment with results
-        if: always()
-        uses: peter-evans/create-or-update-comment@v3
-        with:
-          repository: ${{ inputs.caller-repo }}
-          issue-number: ${{ inputs.pr-number }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          body: |
-            Template repository test results for PR #${{ inputs.pr-number }}:
-            Status: ${{ job.status }}
-            Run URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+      # - name: Create comment with results
+      #   if: always()
+      #   uses: peter-evans/create-or-update-comment@v3
+      #   with:
+      #     repository: ${{ inputs.caller-repo }}
+      #     issue-number: ${{ inputs.pr-number }}
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     body: |
+      #       Template repository test results for PR #${{ inputs.pr-number }}:
+      #       Status: ${{ job.status }}
+      #       Run URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
